fixed overlfow of blurred content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ header nav ul li a, .contact-content ul li {
     flex-direction: column;
     align-items: flex-start;
     border: 3px solid var(--secondary-color);
+    overflow: hidden;
 }
 
 .run-buddy:before {
@@ -202,6 +203,7 @@ header nav ul li a, .contact-content ul li {
     flex-direction: column;
     align-items: flex-start;
     border: 3px solid var(--secondary-color);
+    overflow: hidden;
 }
 
 .password-gen:before {
@@ -334,6 +336,7 @@ footer div {
     
     .section-title h2 {
         color: var(--primary-color);
+        font-weight: normal;
     }
 
 }
